--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
+cat > netlify.toml << 'EOF'
 [build]
   publish = "."
   functions = "netlify/functions"
@@ -5,13 +6,27 @@
 [functions]
   node_bundler = "esbuild"
 
+# Sandbox subdomain redirects - MUST come first
+[[redirects]]
+  from = "https://sandbox.moderntax.io/*"
+  to = "/sandbox-interface.html"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "http://sandbox.moderntax.io/*"
+  to = "/sandbox-interface.html"
+  status = 200
+  force = true
+
+# Main site redirects
 [[redirects]]
   from = "/"
   to = "/index.html"
   status = 200
 
 [[redirects]]
-  from = "/sandbox"  
+  from = "/sandbox"
   to = "/index.html"
   status = 200
 
@@ -30,3 +45,4 @@
   from = "/employment-verify/*"
   to = "/.netlify/functions/employment-verify/:splat"
   status = 200
+EOF
