Fix subdomain redirect syntax using Host condition

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,19 +6,6 @@ cat > netlify.toml << 'EOF'
 [functions]
   node_bundler = "esbuild"
 
-# Sandbox subdomain redirects - MUST come first
-[[redirects]]
-  from = "https://sandbox.moderntax.io/*"
-  to = "/sandbox-interface.html"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "http://sandbox.moderntax.io/*"
-  to = "/sandbox-interface.html"
-  status = 200
-  force = true
-
 # Main site redirects
 [[redirects]]
   from = "/"
@@ -35,6 +22,7 @@ cat > netlify.toml << 'EOF'
   to = "/index.html"
   status = 200
 
+# API redirects
 [[redirects]]
   from = "/api/v1/verify"
   to = "/.netlify/functions/verify"
@@ -45,4 +33,11 @@ cat > netlify.toml << 'EOF'
   from = "/employment-verify/*"
   to = "/.netlify/functions/employment-verify/:splat"
   status = 200
+
+# Sandbox subdomain serving
+[[redirects]]
+  from = "/*"
+  to = "/sandbox-interface.html"
+  status = 200
+  conditions = {Host = ["sandbox.moderntax.io"]}
 EOF
